# qmlplugintrain

./: CMakeLists.txt
coreplugins/plugin-datetime/: CMakeLists.txt  datetime.qrc  datetimeplugin.cpp  datetimeplugin.h
coreplugins/plugin-datetime/qml/: regionandformat.qml  timesettings.qml
coreplugins/plugin-systeminfo/: AboutMyPcBackendObject.cpp  AboutMyPcBackendObject.h  CMakeLists.txt  LicencesBackendObject.cpp  LicencesBackendObject.h  quicksource.qrc  systeminfoplugin.cpp  systeminfoplugin.h
coreplugins/plugin-systeminfo/qml/: ScrollabelPage.qml  aboutpc.qml  gnulicense.qml  privatelicense.qml
coreplugins/plugin-systeminfo/qml/aboutThisPc/: HostName.qml  PcImage.qml  SystemInfo.qml
coreplugins/plugin-systeminfo/qml/widgets/: SettingRowItem.qml
include/interface/: baseInterface.h  modulemodel.h  pluginInterface.h
misc/: icons.qrc
oldpluginloader/: CMakeLists.txt  oldpluginloader.cpp  oldpluginloader.h  source.qrc
oldpluginloader/qml/: oldpluginloader.qml
pluginexamples/plugina/: CMakeLists.txt  GlobalConst.h  plugina.cpp  plugina.h
pluginexamples/plugina/qml/: entrance.qml  entrancec.qml
pluginexamples/pluginb/: CMakeLists.txt  GlobalConst.h  pluginb.cpp  pluginb.h  source.qrc
pluginexamples/pluginb/qml/: entranceb.qml  entrancef.qml
pluginexamples/pluginc/: CMakeLists.txt  pluginc.cpp  pluginc.h
pluginexamples/plugind/: CMakeLists.txt  plugind.cpp  plugind.h  source.qrc
pluginexamples/plugind/qml/: entrancebb.qml  entranceff.qml
pluginexamples/plugine/: CMakeLists.txt  plugine.cpp  plugine.h
plugins/Marine/Control/: ScrollablePage.qml  qmldir  source.qrc
plugins/Marine/Model/: CMakeLists.txt  dccPlugin.cpp  dccPlugin.h  qmldir
plugins/plugina/: CMakeLists.txt  plugina.cpp  plugina.h  source.qrc
plugins/plugina/qml/: entrance.qml  entrancec.qml
plugins/pluginb/: CMakeLists.txt  GlobalConst.cpp  GlobalConst.h  pluginb.cpp  pluginb.h  source.qrc
plugins/pluginb/qml/: entranceb.qml  entrancef.qml
plugins/pluginc/: CMakeLists.txt
qml/: HListView.qml  NormalPage.qml  PageLoader.qml  PageLoaderH.qml  PageLoaderV.qml  TopGridView.qml  TopVListView.qml  VListView.qml  WelcomePage.qml  main.qml  source.qrc
qml/components/: CustomTabBar.qml  RedDot.qml
qmlplugin/Marine/Control/: CMakeLists.txt  DccClock.qml  DccTabBar.qml  SettingGroup.qml  SettingRowItem.qml  dccPlugin.cpp  dccPlugin.h  qmldir  source.qrc
src/: main.cpp
src/frame/: PluginLoader.cpp  PluginLoader.h  main.cpp
src/interface/: modulemodel.cpp
